# sdd-spec-driven-development-demo

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: COMPARISON.md  README.md  TEACHING-GUIDE.md
frameworks/: COMPARISON.md  README.md
frameworks/aws-kiro/: README.md
frameworks/aws-kiro/.kiro/hooks/: never-log-user-text.kiro.hook
frameworks/aws-kiro/.kiro/steering/: product.md  structure.md  tech.md
frameworks/bmad/: README.md  core-config.yaml
frameworks/bmad/docs/: architecture.md  prd.md
frameworks/bmad/docs/stories/: 1.1.project-scaffold.md  1.2.summarize-endpoint.md
frameworks/github-spec-kit/: README.md
frameworks/openspec/: README.md
frameworks/openspec/openspec/: config.yaml
frameworks/rules-and-context/: AGENTS.md  CLAUDE.md  README.md
frameworks/tessl/: README.md  tessl.json
frameworks/tessl/specs/: summarize.spec.md
prompts/: 01-generate-plan.md  02-generate-tasks.md  03-implement.md  README.md
sandbox_test/: .env.example  pyproject.toml
sandbox_test/summarizer_service/: exceptions.py  main.py
sandbox_test/summarizer_service/api/: errors.py  routes.py
sandbox_test/summarizer_service/core/: config.py  logging.py
sandbox_test/summarizer_service/models/: schemas.py
sandbox_test/summarizer_service/services/: summarizer.py
sandbox_test/tests/: conftest.py  test_schemas.py  test_summarize_route.py  test_summarizer.py
specs/: architecture.md  constitution.md  spec.md
summarizer_service/: exceptions.py  main.py
summarizer_service/api/: dependencies.py  errors.py  routes.py
summarizer_service/core/: config.py  logging.py
summarizer_service/models/: schemas.py
summarizer_service/services/: summarizer.py
summarizer_service/tests/: conftest.py  test_schemas.py  test_summarize_route.py  test_summarizer.py
tests/: conftest.py  test_schemas.py  test_summarize_route.py  test_summarizer.py
(+21 files in other folders)
