[project]
name = "summarizer-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.30",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "anyio>=4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["summarizer_service*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["summarizer_service/tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
